--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,31 @@
     <title>Méloé Scavezzoni</title>
   </head>
   <body>
+    <nav class="navbar">
+      <!-- LOGO -->
+    </nav>
+    <div class="banner">
+      <!-- BANNER -->
+    </div>
+    <div class="cv">
+      <div>
+        <!-- SKILLS -->
+      </div>
+      <div>
+        <!-- PROFESSIONAL EXPERIENCES -->
+      </div>
+      <div>
+        <!-- DIPLOMAS AND QUALIFICATIONS -->
+      </div>
+    </div>
+
+    <div class="portfolio">
+      <!-- PORTFOLIO -->
+    </div>
+
+    <div class="footer">
+      <!-- FOOTER -->
+    </div>
     <script src="./js/index.js"></script>
   </body>
 </html>
