--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,13 @@
     <title>Méloé Scavezzoni</title>
   </head>
   <body>
+    <!-- NAVBAR -->
     <nav class="navbar">
-      <!-- LOGO -->
+      <a href="javascript:;">
+        <img src="./assets/Logo.svg" alt="LOGO" />
+      </a>
     </nav>
+
     <div class="banner">
       <!-- BANNER -->
     </div>
