Banner text added

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,12 @@
     </nav>
 
     <div class="banner">
-      <!-- BANNER -->
+      <div class="text-banner">
+        <p>
+          Autodidacte, curieuse et motivée, j’ai envie d’apprendre des nouvelles
+          choses et de perfectionner mes connaissances.
+        </p>
+      </div>
     </div>
     <div class="cv">
       <div>
