Skills titles added

--- a/src/index.html
+++ b/src/index.html
@@ -15,21 +15,39 @@
       </a>
     </nav>
 
+    <!-- BANNER -->
     <div class="banner">
-      <div class="text-banner">
-        <p>
+      <div class="container banner-text">
+        <h1>
           Autodidacte, curieuse et motivée, j’ai envie d’apprendre des nouvelles
           choses et de perfectionner mes connaissances.
-        </p>
+        </h1>
       </div>
     </div>
+
+    <!-- CV -->
     <div class="cv">
-      <div>
-        <!-- SKILLS -->
+      <h2 class="title"><span>Curriculum vitae</span></h2>
+      <!-- SKILLS -->
+      <div class="skills">
+        <h3>Compétences</h3>
+        <div class="container knowledge">
+          <div class="good-knowledge">
+            <h4>Bonnes connaissances</h4>
+          </div>
+          <div class="average-knowledge">
+            <h4>Connaissances moyennes</h4>
+          </div>
+          <div class="basic-knowledge">
+            <h4>Connaissances basiques</h4>
+          </div>
+        </div>
       </div>
+
       <div>
         <!-- PROFESSIONAL EXPERIENCES -->
       </div>
+
       <div>
         <!-- DIPLOMAS AND QUALIFICATIONS -->
       </div>
