Preload Montserrat italic

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="preload"
+      as="font"
+      type="font/ttf"
+      crossorigin=""
+      href="./assets/fonts/Montserrat-Italic.ttf"
+    />
     <link rel="stylesheet" href="./scss/style.scss" />
     <title>Méloé Scavezzoni</title>
   </head>
@@ -17,7 +24,7 @@
 
     <!-- BANNER -->
     <div class="banner">
-      <div class="container banner-text">
+      <div class="banner-text">
         <h1>
           Autodidacte, curieuse et motivée, j’ai envie d’apprendre des nouvelles
           choses et de perfectionner mes connaissances.
