Preload link and skills content added

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,20 @@
       crossorigin=""
       href="./assets/fonts/Montserrat-Italic.ttf"
     />
+    <link
+      rel="preload"
+      as="font"
+      type="font/ttf"
+      crossorigin=""
+      href="./assets/fonts/Montserrat-SemiBold.ttf"
+    />
+    <link
+      rel="preload"
+      as="font"
+      type="font/ttf"
+      crossorigin=""
+      href="./assets/fonts/Montserrat-ExtraBold.ttf"
+    />
     <link rel="stylesheet" href="./scss/style.scss" />
     <title>Méloé Scavezzoni</title>
   </head>
@@ -33,19 +47,107 @@
     </div>
 
     <!-- CV -->
-    <h2 class="title"><span>Curriculum vitae</span></h2>
+    <h2 class="title">
+      <span>Curriculum vitae</span>
+    </h2>
     <!-- SKILLS -->
-    <div class="skills">
+    <div class="bg-secondary">
       <h3>Compétences</h3>
       <div class="container knowledge">
         <div class="good-knowledge">
           <h4>Bonnes connaissances</h4>
+          <div class="html">
+            <p>HTML / HTML5</p>
+          </div>
+          <div class="css">
+            <p>CSS / CSS3</p>
+          </div>
+          <div class="scss">
+            <p>SCSS</p>
+          </div>
+          <div class="js">
+            <p>JavaScript</p>
+          </div>
+          <div class="react">
+            <p>REACT</p>
+          </div>
         </div>
+
         <div class="average-knowledge">
           <h4>Connaissances moyennes</h4>
+          <div class="row">
+            <div class="col-sm col-average-knowledge">
+              <div class="bootstrap">
+                <p>Bootstrap</p>
+              </div>
+              <div class="row">
+                <div class="col-6">
+                  <div class="git">
+                    <p>Git</p>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class="github">
+                    <p>GitHub</p>
+                  </div>
+                </div>
+              </div>
+              <div class="angular">
+                <p>Angular</p>
+              </div>
+              <div class="redux">
+                <p>Redux</p>
+              </div>
+              <div class="adobexd">
+                <p>Adobe XD</p>
+              </div>
+            </div>
+            <div class="col-sm col-average-knowledge">
+              <div class="php">
+                <p>PHP</p>
+              </div>
+              <div class="phpmyadmin">
+                <p>phpMyAdmin</p>
+              </div>
+            </div>
+          </div>
         </div>
+
         <div class="basic-knowledge">
           <h4>Connaissances basiques</h4>
+          <div class="row">
+            <div class="col-sm">
+              <div class="typescript">
+                <p>TypeScript</p>
+              </div>
+              <div class="wordpress">
+                <p>WordPress</p>
+              </div>
+              <div class="parcel">
+                <p>Parcel</p>
+              </div>
+              <div class="webpack">
+                <p>Webpack</p>
+              </div>
+              <div class="balsamiq">
+                <p>Balsamiq</p>
+              </div>
+            </div>
+            <div class="col-sm">
+              <div class="mysql">
+                <p>MySQL</p>
+              </div>
+              <div class="python">
+                <p>Python</p>
+              </div>
+              <div class="batch">
+                <p>Batch</p>
+              </div>
+              <div class="figma">
+                <p>Figma</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
