A class in basic knowledge is added

--- a/src/index.html
+++ b/src/index.html
@@ -116,7 +116,7 @@
         <div class="basic-knowledge">
           <h4>Connaissances basiques</h4>
           <div class="row">
-            <div class="col-sm">
+            <div class="col-sm basic-knowledge-col">
               <div class="typescript">
                 <p>TypeScript</p>
               </div>
@@ -133,7 +133,7 @@
                 <p>Balsamiq</p>
               </div>
             </div>
-            <div class="col-sm">
+            <div class="col-sm basic-knowledge-col">
               <div class="mysql">
                 <p>MySQL</p>
               </div>
