Professional experiences block added

--- a/src/index.html
+++ b/src/index.html
@@ -150,14 +150,188 @@
           </div>
         </div>
       </div>
+    </div>
 
-      <div>
-        <!-- PROFESSIONAL EXPERIENCES -->
+    <!-- PROFESSIONAL EXPERIENCES -->
+    <h3>Expériences professionnelle</h3>
+    <div class="container">
+      <div class="xp-content">
+        <div class="row">
+          <div class="col-5 col-md-4">
+            <p>Décembre 2019 - Février 2020</p>
+          </div>
+          <div class="col-md-3 d-none d-md-block">
+            <div class="separation">
+              <div class="line"></div>
+              <div class="circle"></div>
+              <div class="line"></div>
+            </div>
+          </div>
+          <div class="col-7 col-md-5">
+            <p class="xp-title">
+              <span class="name">Développeuse Web</span>
+              <span class="establishment">Webadev</span>
+              <span class="city">Liège</span>
+            </p>
+            <div class="xp-description">
+              <p>
+                Intégration de site statique à partir de design, création de
+                design, intégration de la partie frontend dans la partie backend
+                (Zend Framework 3), modification de contenu, mise à jour
+                d’anciens projets.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
 
-      <div>
-        <!-- DIPLOMAS AND QUALIFICATIONS -->
+      <div class="xp-content">
+        <div class="row">
+          <div class="col-5 col-md-4">
+            <p>2019</p>
+          </div>
+          <div class="col-md-3 d-none d-md-block">
+            <div class="separation">
+              <div class="line"></div>
+              <div class="circle"></div>
+              <div class="line"></div>
+            </div>
+          </div>
+          <div class="col-7 col-md-5">
+            <p class="xp-title">
+              <span class="name">Hackathon</span>
+              <span class="establishment">WeCargo</span>
+              <span class="city">Liège</span>
+            </p>
+          </div>
+        </div>
       </div>
+
+      <div class="xp-content">
+        <div class="row">
+          <div class="col-5 col-md-4">
+            <p>Mai 2019 - mars 2020</p>
+          </div>
+          <div class="col-md-3 d-none d-md-block">
+            <div class="separation">
+              <div class="line"></div>
+              <div class="circle"></div>
+              <div class="line"></div>
+            </div>
+          </div>
+          <div class="col-7 col-md-5">
+            <p class="xp-title">
+              <span class="name">Développeuse Web Junior</span>
+              <span class="establishment">BeCode</span>
+              <span class="city">Liège</span>
+            </p>
+            <div class="xp-description">
+              <p>
+                Utilisation de Git/GitHub, apprentissage autodidacte de
+                différents langages, création de site web (statique, dynamique,
+                SPA) et d’application.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="xp-content">
+        <div class="row">
+          <div class="col-5 col-md-4">
+            <p>Décembre 2018</p>
+          </div>
+          <div class="col-md-3 d-none d-md-block">
+            <div class="separation">
+              <div class="line"></div>
+              <div class="circle"></div>
+              <div class="line"></div>
+            </div>
+          </div>
+          <div class="col-7 col-md-5">
+            <p class="xp-title">
+              <span class="name">Caissier / Réassortisseur</span>
+              <span class="establishment">Primark</span>
+              <span class="city">Liège</span>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="xp-content">
+        <div class="row">
+          <div class="col-5 col-md-4">
+            <p>Juin 2017</p>
+          </div>
+          <div class="col-md-3 d-none d-md-block">
+            <div class="separation">
+              <div class="line"></div>
+              <div class="circle"></div>
+              <div class="line"></div>
+            </div>
+          </div>
+          <div class="col-7 col-md-5">
+            <p class="xp-title">
+              <span class="name">Assistante Vétérinaire</span>
+              <span class="establishment">Centre Vétérinaire Triovet</span>
+              <span class="city">Liège</span>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="xp-content">
+        <div class="row">
+          <div class="col-5 col-md-4">
+            <p>Décembre 2016</p>
+          </div>
+          <div class="col-md-3 d-none d-md-block">
+            <div class="separation">
+              <div class="line"></div>
+              <div class="circle"></div>
+              <div class="line"></div>
+            </div>
+          </div>
+          <div class="col-7 col-md-5">
+            <p class="xp-title">
+              <span class="name">Assistante Vétérinaire</span>
+              <span class="establishment"
+                >Cabinet Vétérinaire - Dr Catherine Bande</span
+              >
+              <span class="city">Beaufays</span>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="xp-content">
+        <div class="row">
+          <div class="col-5 col-md-4">
+            <p>2013</p>
+          </div>
+          <div class="col-md-3 d-none d-md-block">
+            <div class="separation">
+              <div class="line"></div>
+              <div class="circle"></div>
+              <div class="line"></div>
+            </div>
+          </div>
+          <div class="col-7 col-md-5">
+            <p class="xp-title">
+              <span class="name">Agent d'accueil</span>
+              <span class="establishment">Carrefour</span>
+              <span class="city">Fléron</span>
+            </p>
+            <div class="xp-description">
+              <p>Job étudiant</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <!-- DIPLOMAS AND QUALIFICATIONS -->
     </div>
 
     <div class="portfolio">
