--- a/src/index.html
+++ b/src/index.html
@@ -155,7 +155,7 @@
     <!-- PROFESSIONAL EXPERIENCES -->
     <h3>Expériences professionnelle</h3>
     <div class="container">
-      <div class="xp-content">
+      <div class="padding-content">
         <div class="row">
           <div class="col-5 col-md-4">
             <p>Décembre 2019 - Février 2020</p>
@@ -185,7 +185,7 @@
         </div>
       </div>
 
-      <div class="xp-content">
+      <div class="padding-content">
         <div class="row">
           <div class="col-5 col-md-4">
             <p>2019</p>
@@ -207,7 +207,7 @@
         </div>
       </div>
 
-      <div class="xp-content">
+      <div class="padding-content">
         <div class="row">
           <div class="col-5 col-md-4">
             <p>Mai 2019 - mars 2020</p>
@@ -236,7 +236,7 @@
         </div>
       </div>
 
-      <div class="xp-content">
+      <div class="padding-content">
         <div class="row">
           <div class="col-5 col-md-4">
             <p>Décembre 2018</p>
@@ -258,7 +258,7 @@
         </div>
       </div>
 
-      <div class="xp-content">
+      <div class="padding-content">
         <div class="row">
           <div class="col-5 col-md-4">
             <p>Juin 2017</p>
@@ -280,7 +280,7 @@
         </div>
       </div>
 
-      <div class="xp-content">
+      <div class="padding-content">
         <div class="row">
           <div class="col-5 col-md-4">
             <p>Décembre 2016</p>
@@ -304,7 +304,7 @@
         </div>
       </div>
 
-      <div class="xp-content">
+      <div class="padding-content-end">
         <div class="row">
           <div class="col-5 col-md-4">
             <p>2013</p>
@@ -330,12 +330,166 @@
       </div>
     </div>
 
-    <div>
-      <!-- DIPLOMAS AND QUALIFICATIONS -->
+    <!-- DIPLOMAS AND QUALIFICATIONS -->
+    <div class="bg-secondary">
+      <h3>Diplômes et formations</h3>
+      <div class="container">
+        <div class="padding-content">
+          <div class="row">
+            <div class="col-5 col-md-4">
+              <p class="xp-title">
+                <span class="name">Devenir Web Designer</span>
+                <span class="establishment">Udemy</span>
+              </p>
+            </div>
+            <div class="col-md-3 d-none d-md-block">
+              <div class="separation">
+                <div class="line"></div>
+                <div class="circle"></div>
+                <div class="line"></div>
+              </div>
+            </div>
+            <div class="col-7 col-md-5">
+              <p>Mars 2021</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="padding-content">
+          <div class="row">
+            <div class="col-5 col-md-4">
+              <p class="xp-title">
+                <span class="name">Développeuse Web Junior</span>
+                <span class="establishment">BeCode</span>
+                <span class="city">Liège</span>
+              </p>
+            </div>
+            <div class="col-md-3 d-none d-md-block">
+              <div class="separation">
+                <div class="line"></div>
+                <div class="circle"></div>
+                <div class="line"></div>
+              </div>
+            </div>
+            <div class="col-7 col-md-5">
+              <p>Mai 2019 à mars 2020</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="padding-content">
+          <div class="row">
+            <div class="col-5 col-md-4">
+              <p class="xp-title">
+                <span class="name">Assistante Vétérinaire</span>
+                <span class="establishment">IEPS</span>
+                <span class="city">Fléron</span>
+              </p>
+            </div>
+            <div class="col-md-3 d-none d-md-block">
+              <div class="separation">
+                <div class="line"></div>
+                <div class="circle"></div>
+                <div class="line"></div>
+              </div>
+            </div>
+            <div class="col-7 col-md-5">
+              <p>2015 - 2017</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="padding-content-end">
+          <div class="row">
+            <div class="col-5 col-md-4">
+              <p class="xp-title">
+                <span class="name">CESS</span>
+                <span class="establishment">Lycée Saint-Jacques</span>
+                <span class="city">Liège</span>
+              </p>
+            </div>
+            <div class="col-md-3 d-none d-md-block">
+              <div class="separation">
+                <div class="line"></div>
+                <div class="circle"></div>
+                <div class="line"></div>
+              </div>
+            </div>
+            <div class="col-7 col-md-5">
+              <p>2012</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div class="portfolio">
-      <!-- PORTFOLIO -->
+    <!-- PORTFOLIO -->
+    <h2 class="title">
+      <span>Portfolio</span>
+    </h2>
+    <div class="container">
+      <div class="portfolio">
+        <a href="https://meloescavezzoni.netlify.app/">
+          <img
+            src="./assets/images/portfolio/web-site.jpeg"
+            alt="My old web site"
+          />
+        </a>
+        <a href="https://bookshelf-ms.netlify.app/auth/signup">
+          <img src="./assets/images/portfolio/bookshelf.jpeg" alt="Bookshelf" />
+        </a>
+        <a href="https://pomodoro-ms.netlify.app/">
+          <img src="./assets/images/portfolio/pomodoro.jpeg" alt="Pomodoro" />
+        </a>
+        <a href="https://ferretland-ms.netlify.app/">
+          <img
+            src="./assets/images/portfolio/ferretland.jpeg"
+            alt="Ferretland"
+          />
+        </a>
+        <a href="https://www.ghjpsy.org/">
+          <img src="./assets/images/portfolio/ghjpsy.jpeg" alt="Ghjpsy" />
+        </a>
+        <a href="https://www.coach2.be/">
+          <img src="./assets/images/portfolio/coach2.jpeg" alt="Coach2" />
+        </a>
+        <a href="https://www.climactes.org/">
+          <img src="./assets/images/portfolio/climactes.jpg" alt="Climactes" />
+        </a>
+        <a href="https://www.gregorpotter.com/">
+          <img
+            src="./assets/images/portfolio/gregor-potter.jpeg"
+            alt="Gregor Potter"
+          />
+        </a>
+        <a href="https://www.bureau-andre.be/">
+          <img
+            src="./assets/images/portfolio/bureau-andre.jpeg"
+            alt="Bureau Andre"
+          />
+        </a>
+        <a href="https://www.achillemargaux.be/">
+          <img
+            src="./assets/images/portfolio/achille-et-margaux.jpg"
+            alt="Achille et Margaux"
+          />
+        </a>
+        <a href="https://trouvkach-6.herokuapp.com/">
+          <img src="./assets/images/portfolio/trouvkach.jpg" alt="Trouvkach" />
+        </a>
+        <a href="https://meloscav.github.io/Jeu-Tic-tac-toe-/">
+          <img
+            src="./assets/images/portfolio/tic-tac-toe.jpeg"
+            alt="Tic Tac Toe"
+          />
+        </a>
+        <a href="https://meloscav.github.io/Jeu-casse-briques/">
+          <img
+            src="./assets/images/portfolio/casse-briques.jpg"
+            alt="Casse briques"
+          />
+        </a>
+      </div>
     </div>
 
     <div class="footer">
