Portfolio : content, img, text

--- a/src/index.html
+++ b/src/index.html
@@ -429,66 +429,165 @@
     </h2>
     <div class="container">
       <div class="portfolio">
-        <a href="https://meloescavezzoni.netlify.app/">
+        <div class="block-img grid-item">
           <img
             src="./assets/images/portfolio/web-site.jpeg"
             alt="My old web site"
           />
-        </a>
-        <a href="https://bookshelf-ms.netlify.app/auth/signup">
+          <a href="https://meloescavezzoni.netlify.app/" class="link-img">
+            <span class="title-img">Mon ancien site</span>
+          </a>
+        </div>
+
+        <div class="block-img grid-item">
           <img src="./assets/images/portfolio/bookshelf.jpeg" alt="Bookshelf" />
-        </a>
-        <a href="https://pomodoro-ms.netlify.app/">
+          <a
+            href="https://bookshelf-ms.netlify.app/auth/signup"
+            class="link-img"
+          >
+            <span class="title-img">Bookshelf</span>
+            <span class="description-img">
+              Une application créée avec Angular et Firebase.
+            </span>
+          </a>
+        </div>
+
+        <div class="block-img">
           <img src="./assets/images/portfolio/pomodoro.jpeg" alt="Pomodoro" />
-        </a>
-        <a href="https://ferretland-ms.netlify.app/">
-          <img
-            src="./assets/images/portfolio/ferretland.jpeg"
-            alt="Ferretland"
-          />
-        </a>
-        <a href="https://www.ghjpsy.org/">
+          <a href="https://pomodoro-ms.netlify.app/" class="link-img">
+            <span class="title-img">Pomodoro</span>
+            <span class="description-img">
+              Réalisé avec REACT, il permet de gérer le temps de travail et de
+              pause.
+            </span>
+          </a>
+        </div>
+
+        <div class="block-img">
           <img src="./assets/images/portfolio/ghjpsy.jpeg" alt="Ghjpsy" />
-        </a>
-        <a href="https://www.coach2.be/">
+          <a href="https://www.ghjpsy.org/" class="link-img">
+            <span class="title-img">Ghjpsy</span>
+            <span class="description-img">
+              Participation au développement d'un site internet pour un groupe
+              d'hôpitaux psychiatriques de jour.
+            </span>
+          </a>
+        </div>
+
+        <div class="block-img">
           <img src="./assets/images/portfolio/coach2.jpeg" alt="Coach2" />
-        </a>
-        <a href="https://www.climactes.org/">
-          <img src="./assets/images/portfolio/climactes.jpg" alt="Climactes" />
-        </a>
-        <a href="https://www.gregorpotter.com/">
-          <img
-            src="./assets/images/portfolio/gregor-potter.jpeg"
-            alt="Gregor Potter"
-          />
-        </a>
-        <a href="https://www.bureau-andre.be/">
+          <a href="https://www.coach2.be/" class="link-img">
+            <span class="title-img">Coach2</span>
+            <span class="description-img">
+              Participation au développement d'un site internet pour "Coach2,
+              Business & Human development".
+            </span>
+          </a>
+        </div>
+
+        <div class="block-img">
           <img
             src="./assets/images/portfolio/bureau-andre.jpeg"
             alt="Bureau Andre"
           />
-        </a>
-        <a href="https://www.achillemargaux.be/">
+          <a href="https://www.bureau-andre.be/" class="link-img">
+            <span class="title-img">Bureau Andre</span>
+            <span class="description-img">
+              Participation au développement d'un site pour le bureau d'études
+              et d'expertises André.
+            </span>
+          </a>
+        </div>
+
+        <div class="block-img">
+          <img
+            src="./assets/images/portfolio/gregor-potter.jpeg"
+            alt="Gregor Potter"
+          />
+          <a href="https://www.gregorpotter.com/" class="link-img">
+            <span class="title-img">Gregor Potter</span>
+            <span class="description-img">
+              Participation au développement d'un site internet pour un DJ
+              Belge.
+            </span>
+          </a>
+        </div>
+
+        <div class="block-img">
+          <img src="./assets/images/portfolio/climactes.jpg" alt="Climactes" />
+          <a href="https://www.climactes.org/" class="link-img">
+            <span class="title-img">Climactes</span>
+            <span class="description-img">
+              Participation au développement d'un site internet pour une
+              université d'été qui veut agir pour le climat.
+            </span>
+          </a>
+        </div>
+
+        <div class="block-img">
           <img
             src="./assets/images/portfolio/achille-et-margaux.jpg"
             alt="Achille et Margaux"
           />
-        </a>
-        <a href="https://trouvkach-6.herokuapp.com/">
+          <a href="https://www.achillemargaux.be/" class="link-img">
+            <span class="title-img">Achille et Margaux</span>
+            <span class="description-img">
+              Participation au développement d'un site internet pour une agence
+              immobilière.
+            </span>
+          </a>
+        </div>
+
+        <div class="block-img">
+          <img
+            src="./assets/images/portfolio/ferretland.jpeg"
+            alt="Ferretland"
+          />
+          <a href="https://ferretland-ms.netlify.app/" class="link-img">
+            <span class="title-img">Ferretland</span>
+            <span class="description-img">
+              Un test pour un site de toilettage.
+            </span>
+          </a>
+        </div>
+
+        <div class="block-img">
           <img src="./assets/images/portfolio/trouvkach.jpg" alt="Trouvkach" />
-        </a>
-        <a href="https://meloscav.github.io/Jeu-Tic-tac-toe-/">
+          <a href="https://trouvkach-6.herokuapp.com/" class="link-img">
+            <span class="title-img">Trouvkach</span>
+            <span class="description-img">
+              Une application pour trouver une banque, réalisée en REACT.
+            </span>
+          </a>
+        </div>
+
+        <div class="block-img">
           <img
             src="./assets/images/portfolio/tic-tac-toe.jpeg"
             alt="Tic Tac Toe"
           />
-        </a>
-        <a href="https://meloscav.github.io/Jeu-casse-briques/">
+          <a
+            href="https://meloscav.github.io/Jeu-Tic-tac-toe-/"
+            class="link-img"
+          >
+            <span class="title-img">Tic Tac Toe</span>
+            <span class="description-img">Petit jeu en CANVAS.</span>
+          </a>
+        </div>
+
+        <div class="block-img">
           <img
             src="./assets/images/portfolio/casse-briques.jpg"
             alt="Casse briques"
           />
-        </a>
+          <a
+            href="https://meloscav.github.io/Jeu-casse-briques/"
+            class="link-img"
+          >
+            <span class="title-img">Casse briques</span>
+            <span class="description-img">Petit jeu en CANVAS.</span>
+          </a>
+        </div>
       </div>
     </div>
 
