Nav and link deketed

--- a/src/index.html
+++ b/src/index.html
@@ -40,11 +40,9 @@
     <div class="custom-container">
       <div class="header-banner">
         <div class="intro-container">
-          <nav class="logo-container">
-            <a href="javascript:;">
-              <img src="./assets/Logo.svg" alt="LOGO" />
-            </a>
-          </nav>
+          <div class="logo-container">
+            <img src="./assets/Logo.svg" alt="LOGO" />
+          </div>
           <h1>
             <span>Autodidacte</span>, <span>curieuse</span> et
             <span>motivée</span>, j’ai envie d’apprendre des nouvelles choses et
