--- a/src/index.html
+++ b/src/index.html
@@ -199,7 +199,7 @@
               <div class="col-5 col-md-3">
                 <p class="text-align-right">Décembre 2019 - Février 2020</p>
               </div>
-              <div class="col-md-2 d-none d-md-block">
+              <div class="d-none d-md-block col-md-auto">
                 <div class="separation">
                   <div class="line"></div>
                   <div class="circle"></div>
@@ -229,7 +229,7 @@
               <div class="col-5 col-md-3">
                 <p class="text-align-right">2019</p>
               </div>
-              <div class="col-md-2 d-none d-md-block">
+              <div class="d-none d-md-block col-md-auto">
                 <div class="separation">
                   <div class="line"></div>
                   <div class="circle"></div>
@@ -251,7 +251,7 @@
               <div class="col-5 col-md-3">
                 <p class="text-align-right">Mai 2019 - mars 2020</p>
               </div>
-              <div class="col-md-2 d-none d-md-block">
+              <div class="d-none d-md-block col-md-auto">
                 <div class="separation">
                   <div class="line"></div>
                   <div class="circle"></div>
@@ -280,7 +280,7 @@
               <div class="col-5 col-md-3">
                 <p class="text-align-right">Décembre 2018</p>
               </div>
-              <div class="col-md-2 d-none d-md-block">
+              <div class="d-none d-md-block col-md-auto">
                 <div class="separation">
                   <div class="line"></div>
                   <div class="circle"></div>
@@ -302,7 +302,7 @@
               <div class="col-5 col-md-3">
                 <p class="text-align-right">Juin 2017</p>
               </div>
-              <div class="col-md-2 d-none d-md-block">
+              <div class="d-none d-md-block col-md-auto">
                 <div class="separation">
                   <div class="line"></div>
                   <div class="circle"></div>
@@ -324,7 +324,7 @@
               <div class="col-5 col-md-3">
                 <p class="text-align-right">Décembre 2016</p>
               </div>
-              <div class="col-md-2 d-none d-md-block">
+              <div class="d-none d-md-block col-md-auto">
                 <div class="separation">
                   <div class="line"></div>
                   <div class="circle"></div>
@@ -348,7 +348,7 @@
               <div class="col-5 col-md-3">
                 <p class="text-align-right">2013</p>
               </div>
-              <div class="col-md-2 d-none d-md-block">
+              <div class="d-none d-md-block col-md-auto">
                 <div class="separation">
                   <div class="line"></div>
                   <div class="circle"></div>
@@ -376,21 +376,21 @@
         <div class="container">
           <div class="padding-content">
             <div class="row justify-content-md-center">
-              <div class="col-5 col-md-4">
+              <div class="col-7 col-md-5">
                 <p class="xp-title text-align-right">
                   <span class="name">Devenir Web Designer</span>
                   <span class="establishment">Udemy</span>
                   <span class="city">Liège</span>
                 </p>
               </div>
-              <div class="col-md-2 d-none d-md-block">
+              <div class="d-none d-md-block col-md-auto">
                 <div class="separation">
                   <div class="line"></div>
                   <div class="circle"></div>
                   <div class="line"></div>
                 </div>
               </div>
-              <div class="col-7 col-md-5">
+              <div class="col-5 col-md-3">
                 <p>Mars 2021</p>
               </div>
             </div>
@@ -398,21 +398,21 @@
 
           <div class="padding-content">
             <div class="row justify-content-md-center">
-              <div class="col-5 col-md-4">
+              <div class="col-7 col-md-5">
                 <p class="xp-title text-align-right">
                   <span class="name">Développeuse Web Junior</span>
                   <span class="establishment">BeCode</span>
                   <span class="city">Liège</span>
                 </p>
               </div>
-              <div class="col-md-2 d-none d-md-block">
+              <div class="d-none d-md-block col-md-auto">
                 <div class="separation">
                   <div class="line"></div>
                   <div class="circle"></div>
                   <div class="line"></div>
                 </div>
               </div>
-              <div class="col-7 col-md-5">
+              <div class="col-5 col-md-3">
                 <p>Mai 2019 à mars 2020</p>
               </div>
             </div>
@@ -420,21 +420,21 @@
 
           <div class="padding-content">
             <div class="row justify-content-md-center">
-              <div class="col-5 col-md-4">
+              <div class="col-7 col-md-5">
                 <p class="xp-title text-align-right">
                   <span class="name">Assistante Vétérinaire</span>
                   <span class="establishment">IEPS</span>
                   <span class="city">Fléron</span>
                 </p>
               </div>
-              <div class="col-md-2 d-none d-md-block">
+              <div class="d-none d-md-block col-md-auto">
                 <div class="separation">
                   <div class="line"></div>
                   <div class="circle"></div>
                   <div class="line"></div>
                 </div>
               </div>
-              <div class="col-7 col-md-5">
+              <div class="col-5 col-md-3">
                 <p>2015 - 2017</p>
               </div>
             </div>
@@ -442,21 +442,21 @@
 
           <div class="padding-content-end">
             <div class="row justify-content-md-center">
-              <div class="col-5 col-md-4">
+              <div class="col-7 col-md-5">
                 <p class="xp-title text-align-right">
                   <span class="name">CESS</span>
                   <span class="establishment">Lycée Saint-Jacques</span>
                   <span class="city">Liège</span>
                 </p>
               </div>
-              <div class="col-md-2 d-none d-md-block">
+              <div class="d-none d-md-block col-md-auto">
                 <div class="separation">
                   <div class="line"></div>
                   <div class="circle"></div>
                   <div class="line"></div>
                 </div>
               </div>
-              <div class="col-7 col-md-5">
+              <div class="col-5 col-md-3">
                 <p>2012</p>
               </div>
             </div>
