--- a/src/index.html
+++ b/src/index.html
@@ -37,35 +37,41 @@
   </head>
 
   <body>
-    <div class="custom-container">
-      <div class="header-banner">
-        <div class="intro-container">
-          <div class="logo-container">
-            <img src="./assets/Logo.svg" alt="LOGO" />
-          </div>
-          <h1>
-            <span>Autodidacte</span>, <span>curieuse</span> et
-            <span>motivée</span>, j’ai envie d’apprendre des nouvelles choses et
-            de perfectionner mes connaissances.
-          </h1>
+    <!-- HEADER -->
 
-          <div class="icons">
-            <a href="javascript:;">
-              <svg>
-                <use xlink:href="./assets/icons/sprite.svg#linkedin"></use>
-              </svg>
-            </a>
-            <a href="javascript:;">
-              <svg>
-                <use xlink:href="./assets/icons/sprite.svg#github"></use>
-              </svg>
-            </a>
-          </div>
+    <div class="header-banner">
+      <div class="intro-container">
+        <div class="logo-container">
+          <svg>
+            <use xlink:href="./assets/icons/sprite.svg#logo2"></use>
+          </svg>
         </div>
-        <div class="banner-image-container">
-          <div class="banner-image"></div>
+        <h1>
+          <span>Autodidacte</span>, <span>curieuse</span> et
+          <span>motivée</span>, j’ai envie d’apprendre des nouvelles choses et
+          de perfectionner mes connaissances.
+        </h1>
+
+        <div class="icons">
+          <a href="https://www.linkedin.com/in/meloe-scavezzoni/">
+            <svg>
+              <use xlink:href="./assets/icons/sprite.svg#linkedin"></use>
+            </svg>
+          </a>
+          <a href="https://github.com/MeloScav">
+            <svg>
+              <use xlink:href="./assets/icons/sprite.svg#github"></use>
+            </svg>
+          </a>
         </div>
-        <div class="scroll-down-button"></div>
+      </div>
+      <div class="scroll-down-button">
+        <svg>
+          <use xlink:href="./assets/icons/sprite.svg#down-arrow"></use>
+        </svg>
+      </div>
+      <div class="banner-image-container">
+        <div class="banner-image"></div>
       </div>
     </div>
 
@@ -658,15 +664,15 @@
           <span>Retrouvez-moi également sur :</span>
         </h4>
         <div class="icons">
-          <a href="javascript:;">
-            <img
-              class="icon"
-              src="./assets/icons/linkedin.svg"
-              alt="LinkedIn"
-            />
+          <a href="https://www.linkedin.com/in/meloe-scavezzoni/">
+            <svg>
+              <use xlink:href="./assets/icons/sprite.svg#linkedin"></use>
+            </svg>
           </a>
-          <a href="javascript:;">
-            <img class="icon" src="./assets/icons/github.svg" alt="LinkedIn" />
+          <a href="https://github.com/MeloScav">
+            <svg>
+              <use xlink:href="./assets/icons/sprite.svg#github"></use>
+            </svg>
           </a>
         </div>
       </div>
