--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
       <div class="intro-container">
         <div class="logo-container">
           <svg>
-            <use xlink:href="./assets/icons/sprite.svg#logo2"></use>
+            <use href="./assets/icons/sprite.svg#logo2"></use>
           </svg>
         </div>
         <h1>
@@ -60,14 +60,14 @@
           </a>
           <a href="https://github.com/MeloScav">
             <svg>
-              <use xlink:href="./assets/icons/sprite.svg#github"></use>
+              <use href="./assets/icons/sprite.svg#github"></use>
             </svg>
           </a>
         </div>
       </div>
       <div class="scroll-down-button">
         <svg>
-          <use xlink:href="./assets/icons/sprite.svg#down-arrow"></use>
+          <use href="./assets/icons/sprite.svg#down-arrow"></use>
         </svg>
       </div>
       <div class="banner-image-container">
@@ -666,12 +666,12 @@
         <div class="icons">
           <a href="https://www.linkedin.com/in/meloe-scavezzoni/">
             <svg>
-              <use xlink:href="./assets/icons/sprite.svg#linkedin"></use>
+              <use href="./assets/icons/sprite.svg#linkedin"></use>
             </svg>
           </a>
           <a href="https://github.com/MeloScav">
             <svg>
-              <use xlink:href="./assets/icons/sprite.svg#github"></use>
+              <use href="./assets/icons/sprite.svg#github"></use>
             </svg>
           </a>
         </div>
