--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
         <div class="icons">
           <a href="https://www.linkedin.com/in/meloe-scavezzoni/">
             <svg>
-              <use xlink:href="./assets/icons/sprite.svg#linkedin"></use>
+              <use href="./assets/icons/sprite.svg#linkedin"></use>
             </svg>
           </a>
           <a href="https://github.com/MeloScav">
