--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./assets/favicon.ico" />
+    <link rel="icon" type="image/png" href="./assets/favicon-32x32.png" />
     <link
       rel="preload"
       as="font"
@@ -33,6 +35,7 @@
       href="./assets/fonts/Montserrat-ExtraBold.ttf"
     />
     <link rel="stylesheet" href="./scss/style.scss" />
+
     <title>Méloé Scavezzoni</title>
   </head>
 
