--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Primary Meta Tags -->
+    <title>Scavezzoni Méloé - Développeuse Web Frontend</title>
+    <meta name="title" content="Scavezzoni Méloé - Développeuse Web Frontend" />
+    <meta name="description" content="Site CV - Portfolio" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://unruffled-panini-66f35a.netlify.app"
+    />
+    <meta
+      property="og:title"
+      content="Scavezzoni Méloé - Développeuse Web Frontend"
+    />
+    <meta property="og:description" content="Site CV - Portfolio" />
+    <meta property="og:image" content="./assets/images/image-logo.png" />
     <link rel="icon" href="./assets/favicon.ico" />
     <link rel="icon" type="image/png" href="./assets/favicon-32x32.png" />
     <link
