--- a/src/index.html
+++ b/src/index.html
@@ -4,25 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Primary Meta Tags -->
-    <title>Scavezzoni Méloé - Développeuse Web Frontend</title>
-    <meta name="title" content="Scavezzoni Méloé - Développeuse Web Frontend" />
-    <meta name="description" content="Site CV - Portfolio" />
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://unruffled-panini-66f35a.netlify.app"
-    />
-    <meta
-      property="og:title"
-      content="Scavezzoni Méloé - Développeuse Web Frontend"
-    />
-    <meta property="og:description" content="Site CV - Portfolio" />
-    <meta
-      property="og:image"
-      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
-    />
     <link rel="icon" href="./assets/favicon.ico" />
     <link rel="icon" type="image/png" href="./assets/favicon-32x32.png" />
     <link
@@ -54,8 +35,33 @@
       href="./assets/fonts/Montserrat-ExtraBold.ttf"
     />
     <link rel="stylesheet" href="./scss/style.scss" />
-
-    <title>Méloé Scavezzoni</title>
+    <!-- Primary Meta Tags -->
+    <title>Scavezzoni Méloé - Développeuse Web Frontend</title>
+    <meta name="title" content="Scavezzoni Méloé - Développeuse Web Frontend" />
+    <meta name="description" content="Site CV - Portfolio" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://unruffled-panini-66f35a.netlify.app"
+    />
+    <meta
+      property="og:title"
+      content="Scavezzoni Méloé - Développeuse Web Frontend"
+    />
+    <meta property="og:description" content="Site CV - Portfolio" />
+    <meta property="og:image" content="./assets/images/image-logo.png" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://unruffled-panini-66f35a.netlify.app"
+    />
+    <meta
+      property="twitter:title"
+      content="Scavezzoni Méloé - Développeuse Web Frontend"
+    />
+    <meta property="twitter:description" content="Site CV - Portfolio" />
+    <meta property="twitter:image" content="./assets/images/image-logo.png" />
   </head>
 
   <body>
